# Re

src/: App.jsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  videodvor_scanner.rs
