[package]
name = "hyperion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
aes-gcm = "0.10"
sha2 = "0.10"
machine-uid = "0.3"
zeroize = "1.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
